style(table): add padding height to avoid head not align

--- a/src/components/data-table/index.css
+++ b/src/components/data-table/index.css
@@ -156,6 +156,10 @@ div.no-data-info {
     .table-head--right {
         text-align: right;
     }
+
+    .table-head--center {
+        padding-top: 20px;
+    }
 }
 
 @media screen and (width >= 800px) {
